--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,15 @@
 {
-  "name": "Nosso App ❤️",
+  "name": "Nosso Mundo ❤️",
   "short_name": "NossoApp",
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
-  "background_color": "#ffeef2",
-  "theme_color": "#ff6b6b",
+  "background_color": "#fff5f8",
+  "theme_color": "#ff4f87",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2589/2589175.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "./icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ]
 }
