--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,18 @@
 {
   "name": "Nosso Mundo ❤️",
-  "short_name": "NossoApp",
-  "description": "Nosso espaço especial para compartilhar momentos",
-  "start_url": ".",
-  "scope": "/",
+  "short_name": "NossoMundo",
+  "description": "Nosso cantinho especial",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#fff5f8",
   "theme_color": "#ff4f87",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1077/1077114.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/1077/1077114.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2589/2589175.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
